# evidentia

./: .cursorrules  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ControlBridge-Architecture-and-Implementation-Plan.md  Dockerfile  EOL.md  Evidentia-Architecture-and-Implementation-Plan.md  GOVERNANCE.md  LICENSE  README.md  RENAMED.md  SECURITY.md  codecov.yml  mkdocs.yml  osv-scanner.toml  pyproject.toml
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/: dependabot.yml  repo-description.txt  secret_scanning.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/gap-analysis/: README.md  action.yml
.github/codeql/python-sanitizers/: ValidateWithinSanitizer.qll  qlpack.yml
.github/workflows/: action-smoke-test.yml  catalog-refresh.yml  codeql.yml  container-build.yml  controlbridge.yml  evidentia.yml  mutmut.yml  release.yml  scorecard.yml  sync-wiki.yml  test.yml  verify-changelog.yml  verify-osps-conformance.yml  verify-workflow-perms.yml
docker/: requirements.in  requirements.txt
docs/: ROADMAP.md  access-continuity.md  air-gapped.md  api-stability.md  assurance-case.md  benchmarks.md  bi-integrations.md  capability-matrix.md  cloud-dw-collectors.md  collector-idempotency-audit.md  conmon-daemon-deployment.md  conmon-runbook.md  contributing-a-catalog.md  deprecation-calendar.md  dfah-faithfulness.md  dockerfile-pinning.md  enterprise-grade-accepted-findings.md  enterprise-grade.md  evidence-integrity.md  financial-sector-overlay.md  gemara-mapping.md  ide-setup.md  integration-survey.md  log-schema.md  mutation-testing.md  ocsf-mapping.md  openssf-best-practices-badge.md  poam-runbook.md  positioning-and-value.md  quickstart.md  release-checklist.md  security-review-v0.10.0.md  security-review-v0.10.1.md  security-review-v0.10.3.md  security-review-v0.10.4.md  security-review-v0.7.10.md  security-review-v0.7.11.md  security-review-v0.7.13.md  security-review-v0.7.14.md  security-review-v0.7.16.md  (+51 more)
docs/architecture/: effort-estimation.md
docs/archive/: README.md  RENAMED.md
docs/github-action/: README.md  workflow-example.yml
docs/gui/: README.md  architecture.md
docs/wiki/1-getting-started/: installation.md  quickstart.md
docs/wiki/2-guides/: ai-governance.md  air-gapped-install.md  generate-and-quantify-risk.md  governance-metrics-and-workflows.md  index.md  manage-model-risk.md  manage-third-party-risk.md  mcp-client-setup.md  serve-the-web-ui.md  sign-and-verify-evidence.md
docs/wiki/3-concepts/: catalog-engine.md  crosswalk-engine.md  data-model.md  evidence-integrity.md  frozen-surfaces-and-stability.md  index.md  rbac-and-multi-tenancy.md
docs/wiki/4-reference/: catalogs.md  cli.md  configuration.md  crosswalks.md  index.md  inventory-and-system-context.md  mcp-tools.md
docs/wiki/5-compliance/: catalog-inventory.md  crosswalk-index.md  framework-conformance.md  index.md
docs/wiki/6-project/: api-stability.md  changelog.md  faq.md  index.md  roadmap.md  security.md  verification.md  versioning.md
examples/: WALKTHROUGH.md
examples/acme-healthtech/: README.md  controlbridge.yaml  evidentia.yaml  my-controls.yaml  system-context.yaml
examples/dod-contractor/: README.md  controlbridge.yaml  evidentia.yaml  my-controls.yaml  system-context.yaml
examples/mcp/: cimd-registry-power.json  cimd-registry-readonly.json
examples/meridian-fintech/: README.md  controlbridge.yaml  evidentia.yaml  my-controls.csv  my-controls.yaml  system-context.yaml
examples/meridian-fintech-v2/: README.md  controlbridge.yaml  evidentia.yaml  my-controls-pr.yaml  my-controls.csv  my-controls.yaml  system-context.yaml
examples/meridian-fintech-v2-with-bi/: README.md
examples/meridian-fintech-v2/snapshots/: baseline.json  pr-branch.json  pr-diff.md
examples/meridian-fintech-v2/user-catalog-demo/: soc2-tsc-licensed.json
scripts/: _bump_version.py  _create_shim_packages.py  _rename_content.py  bump_version.py  check_docs_health.py  check_version_consistency.py  compute_inter_rater_kappa.py  dump_openapi.py  extract_changelog_block.py  gen_readme_releases.py  run_osv_scan.py  standing_rule_sweep.sh  sync_wiki_to_github.py  tune_faithfulness_threshold.py  verify_osps_conformance.py  version_tracked_files.yaml
scripts/catalogs/: _generators.py  fetch_nist_oscal.py  gen_crosswalks.py  gen_fedramp_cmmc.py  gen_ffiec.py  gen_international.py  gen_nist_family.py  gen_occ_sr.py  gen_osps_crosswalks.py  gen_state_privacy.py  gen_stubs.py  gen_threats.py  gen_us_regulatory.py  regenerate_manifest.py  rewrite_fedramp_pointers.py
scripts/controlbridge-action-skeleton/: LICENSE  README-repo.md  README.md  action.yml
scripts/demo/: generate_snapshot_pair.py
scripts/evidentia-action-skeleton/: README-repo.md  README.md  action.yml
scripts/pre_push/: check_commit_signatures.py  check_uv_lock_pin_drift.py
scripts/wiki/: sync_api_docs.py  sync_reference.py
tests/dast/: test_openapi_fuzz.py
tests/data/dfah-calibration/: README.md  (+8 more)
tests/fixtures/: sample-inventory.csv  sample-inventory.yaml  sample-system-context.yaml
tests/integration/: test_osps_conformance.py  test_walkthrough_federal_si.py
tests/property/: __init__.py  conftest.py  test_crosswalk.py  test_normalizer.py  test_ocsf_round_trip.py
tests/unit/: test_bump_version.py  test_bundled_examples.py  test_check_docs_health_readme.py  test_check_version_consistency.py  test_commit_subject.py  test_config.py  test_evidence_store.py  test_frontend_version_guard.py  test_gen_osps_crosswalks.py  test_gen_readme_releases.py  test_idempotency_prune.py  test_init_wizard.py  test_network_guard.py  test_rate_limit.py  test_rbac.py  test_rbac_multi_tenant.py  test_rename_shims.py  test_security_file_lock.py  test_security_paths.py  test_sync_api_docs.py  test_sync_reference.py  test_sync_wiki_to_github.py  test_tenant_scoped_storage.py  test_tprm_concentration.py  test_tprm_questionnaire.py  test_vendor_store.py  test_verify_osps_conformance.py
(+154 files in other folders)
