[project]
name = "evidentia-workspace"
version = "0.6.0"
requires-python = ">=3.12"
description = "Workspace root for the Evidentia GRC tool monorepo"

[tool.uv.workspace]
members = [
    "packages/evidentia-core",
    "packages/evidentia-ai",
    "packages/evidentia-collectors",
    "packages/evidentia-integrations",
    "packages/evidentia",
    "packages/evidentia-api",
    # v0.6.0 rename shims. Each `shim-controlbridge*` workspace member
    # publishes the OLD PyPI name at v0.5.1 as a thin re-export forwarder
    # to its `evidentia-*` replacement. Dev-installed alongside the
    # primary packages so their DeprecationWarning + submodule-aliasing
    # behavior is exercised by the test suite. Yanked from PyPI at v0.7.0.
    "packages/shim-controlbridge",
    "packages/shim-controlbridge-core",
    "packages/shim-controlbridge-ai",
    "packages/shim-controlbridge-api",
    "packages/shim-controlbridge-collectors",
    "packages/shim-controlbridge-integrations",
]
# Note: packages/evidentia-ui is a Vite+React project, NOT a Python
# workspace member. It builds via `npm run build` in its own directory;
# the release workflow copies its dist/* into evidentia-api's
# src/evidentia_api/static/ before wheel packaging.

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.12",
    # v0.3.0: flipped mypy CI job from advisory to strict. types-PyYAML is
    # needed to silence "Library stubs not installed for yaml" across every
    # module that parses catalog JSON / frameworks.yaml / user-dir manifests.
    "types-PyYAML>=6.0",
    # `pydantic.mypy` plugin is enabled in `[tool.mypy]`; pydantic must be
    # in the mypy-run env so the plugin can be imported at type-check time.
    "pydantic>=2.9",
    # v0.5.0: AWS collector tests run against moto's AWS API mock.
    # `boto3` is the runtime dependency (also in evidentia-collectors
    # [aws] extra); having it in dev deps means collector tests run
    # without an extra install step.
    "boto3>=1.35",
    "moto[all]>=5.0",
]

[tool.uv.sources]
evidentia-core = { workspace = true }
evidentia-ai = { workspace = true }
evidentia-collectors = { workspace = true }
evidentia-integrations = { workspace = true }
evidentia = { workspace = true }
evidentia-api = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 120
# scripts/catalogs/ are build-time catalog generators with long one-liner
# data tuples (control IDs + titles + families). Long lines are the point —
# one tuple per row makes these files diff-reviewable. dist/ is build output.
extend-exclude = ["scripts/catalogs/", "dist/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
]
ignore = [
    # Typer uses `typer.Option(...)` as default argument values — this is the
    # documented idiomatic pattern; B008 would flag every Typer CLI declaration.
    "B008",
    # str enums (`class Foo(str, Enum):`) remain idiomatic Pydantic-friendly
    # patterns that serialize cleanly to JSON even on Python 3.12.
    "UP042",
    # Compliance content (control titles, crosswalk notes, report headers)
    # intentionally uses em-dashes and other typographic characters. The CLI
    # output layer is responsible for terminal-safe rendering.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Tests import fixtures and reset registries — a few idiomatic pytest patterns
# are noisy under strict rules but not worth rewriting.
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# v0.3.0: enable the Pydantic mypy plugin so `Model.model_validate*()` is
# typed as returning `Model` (without the plugin, mypy sees every
# `model_validate()` call as returning `Any` and every enclosing function
# return then trips `[no-any-return]`).
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ai: marks tests that call LLM APIs (expensive)",
]
