[project]
name = "evidentia-workspace"
version = "0.10.4"
requires-python = ">=3.12"
description = "Workspace root for the Evidentia GRC tool monorepo"

[tool.uv.workspace]
members = [
    "packages/evidentia-core",
    "packages/evidentia-ai",
    "packages/evidentia-collectors",
    "packages/evidentia-integrations",
    "packages/evidentia",
    "packages/evidentia-api",
    "packages/evidentia-mcp",
    # v0.7.0: shim-controlbridge-* workspace members removed per the
    # public contract documented in README.md, RENAMED.md, and CHANGELOG.md.
    # The v0.5.1 shim wheels remain on PyPI for installed users (until
    # manually yanked); future builds no longer produce shim wheels.
    # See `scripts/_create_shim_packages.py` for the historical generator.
]
# Note: packages/evidentia-ui is a Vite+React project, NOT a Python
# workspace member. It builds via `npm run build` in its own directory;
# the release workflow copies its dist/* into evidentia-api's
# src/evidentia_api/static/ before wheel packaging.

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    # v0.3.0: flipped mypy CI job from advisory to strict. types-PyYAML is
    # needed to silence "Library stubs not installed for yaml" across every
    # module that parses catalog JSON / frameworks.yaml / user-dir manifests.
    "types-PyYAML>=6.0",
    # `pydantic.mypy` plugin is enabled in `[tool.mypy]`; pydantic must be
    # in the mypy-run env so the plugin can be imported at type-check time.
    "pydantic>=2.9",
    # v0.5.0: AWS collector tests run against moto's AWS API mock.
    # `boto3` is the runtime dependency (also in evidentia-collectors
    # [aws] extra); having it in dev deps means collector tests run
    # without an extra install step.
    "boto3>=1.43.12",
    "moto[all]>=5.2.1",
    # v0.7.12 P0: cloud-WORM backend SDKs (gated as evidentia[worm-X]
    # extras for end-users; in dev-deps so the dev/CI venv runs the
    # backend tests without needing the extra activated).
    "azure-storage-blob>=12.29.0",
    "azure-identity>=1.16.0",
    "google-cloud-storage>=2.18.0",
    # v0.7.0: BLOCKER B7 (docs/enterprise-grade.md). Validates that our
    # OSCAL Assessment Results output round-trips through the NIST
    # OSCAL-Compass reference impl. Trestle is on pydantic.v1 internally
    # with `Extra.forbid` everywhere — catches unknown-field bugs that
    # NIST's JSON Schema does not (NIST's schema is permissive on
    # additionalProperties). Custom `ns="https://evidentia.dev/oscal"`
    # props in back-matter are accepted unchanged. Guarded with
    # pytest.importorskip so the test suite runs on minimal installs.
    "compliance-trestle>=4.0.3,<5.0",
    "mcp>=1.27.1",
    # v0.8.2 G2: property-based tests on the gap-analyzer
    # normalizer + the catalogs crosswalk engine. Generates
    # randomized inputs against canonical invariants (idempotence,
    # case-folding, prefix-stripping, mapping cardinality) to
    # catch regressions hand-written tests would miss. Tests live
    # in tests/property/.
    "hypothesis>=6.152.9",
    # v0.8.2 G1: mutation testing baseline on the gap_analyzer +
    # risk_statements modules. Mutmut introduces small random
    # mutations to source code + re-runs the test suite — surviving
    # mutants point at gaps in the test corpus. Targeting a 65%
    # baseline kill rate (configurable via [tool.mutmut] block).
    # Runs out-of-band (weekly cron + on-demand workflow_dispatch)
    # because full mutmut runs are slow (~30-60 min per module).
    "mutmut>=3.2",
    # v0.8.3 P1.1: numpy is used by evidentia_ai.eval.
    # faithfulness_semantic for cosine-similarity computation.
    # Production runtime gates on the [eval-faithfulness] extra
    # which carries sentence-transformers + numpy together; dev
    # deps surface numpy directly so tests can mock the
    # sentence-transformers half while exercising the real numpy
    # math. Sentence-transformers itself is NOT in dev deps —
    # tests mock it to validate the missing-extra failure mode.
    "numpy>=2.4.6",
    # v0.9.5 P1.1: random test ordering surfaces test-isolation
    # bugs that the default alphabetical ordering masks. Pinned
    # opt-out per test invocation: ``pytest -p no:randomly``
    # restores legacy ordering when bisecting a regression. The
    # daily CI pytest run uses a fresh random seed; PRs use the
    # seed of the prior main-branch CI run so reviewers can
    # reproduce the exact ordering that triggered any failure.
    "pytest-randomly>=3.16",
    # v0.9.5 P1.2: DAST tools for the Step 4 capability-matrix
    # DAST sub-step. Tests live under ``tests/dast/``; they're
    # NOT part of the default pytest run (collected only when
    # ``--dast`` is passed). schemathesis fuzzes the FastAPI
    # OpenAPI spec; playwright drives the React UI for end-to-
    # end probing. Both ride in dev-deps so a fresh dev/CI venv
    # can run the DAST suite without separate install steps.
    "schemathesis>=4.19.0",
    "playwright>=1.50",
    # v0.10.0: py-ocsf-models drives the OCSF mapping layer
    # (evidentia_core.ocsf). It is an end-user extra
    # (`evidentia-core[ocsf]`); mirrored here in dev-deps so the
    # dev/CI venv runs the OCSF round-trip tests without activating
    # the extra — same pattern as boto3 / azure / gcs above.
    "py-ocsf-models>=0.9.0,<0.10.0",
]

[tool.uv.sources]
evidentia-core = { workspace = true }
evidentia-ai = { workspace = true }
evidentia-collectors = { workspace = true }
evidentia-integrations = { workspace = true }
evidentia = { workspace = true }
evidentia-api = { workspace = true }
evidentia-mcp = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 120
# scripts/catalogs/ are build-time catalog generators with long one-liner
# data tuples (control IDs + titles + families). Long lines are the point —
# one tuple per row makes these files diff-reviewable. dist/ is build output.
extend-exclude = ["scripts/catalogs/", "dist/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
]
ignore = [
    # Typer uses `typer.Option(...)` as default argument values — this is the
    # documented idiomatic pattern; B008 would flag every Typer CLI declaration.
    "B008",
    # str enums (`class Foo(str, Enum):`) remain idiomatic Pydantic-friendly
    # patterns that serialize cleanly to JSON even on Python 3.12.
    "UP042",
    # Compliance content (control titles, crosswalk notes, report headers)
    # intentionally uses em-dashes and other typographic characters. The CLI
    # output layer is responsible for terminal-safe rendering.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Tests import fixtures and reset registries — a few idiomatic pytest patterns
# are noisy under strict rules but not worth rewriting.
"tests/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# v0.3.0: enable the Pydantic mypy plugin so `Model.model_validate*()` is
# typed as returning `Model` (without the plugin, mypy sees every
# `model_validate()` call as returning `Any` and every enclosing function
# return then trips `[no-any-return]`).
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# v0.9.5 P1.2: tests/dast/ is opt-in. Default pytest runs skip
# the DAST suite (Schemathesis + Playwright); operators invoke
# explicitly via `pytest tests/dast/` after the dev-deps + the
# `playwright install` browser download. CI test.yml runs the
# default collection and SHOULD NOT include DAST per the
# README scope. See `tests/dast/README.md` for the per-suite
# invocation guidance.
addopts = "--ignore=tests/dast"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ai: marks tests that call LLM APIs (expensive)",
]

# v0.8.2 G1: mutmut mutation-testing config.
#
# Paths-to-mutate covers the two highest-leverage modules:
#  - evidentia_core.gap_analyzer: the canonical control-mapping
#    engine; bugs here surface as silent gap mis-classifications.
#  - evidentia_ai.risk_statements: the canonical AI risk-statement
#    generator; bugs here ship hallucinated content into auditor-
#    facing artifacts.
#
# Runner config: ``pytest -x -q --no-header tests/`` matches the
# CI suite minus -v noise; --max-fail=1 bails fast on test
# regressions so the mutation runner doesn't waste time on a
# broken baseline.
#
# The first ``mutmut run`` establishes the v0.8.2 baseline — the
# CI gate fails on regression FROM that baseline (not against an
# absolute threshold). See docs/mutation-testing.md for the full
# operator workflow.
[tool.mutmut]
paths_to_mutate = [
    "packages/evidentia-core/src/evidentia_core/gap_analyzer/",
    "packages/evidentia-ai/src/evidentia_ai/risk_statements/",
]
runner = "uv run pytest -x -q --no-header tests/unit/test_gap_analyzer/ tests/unit/test_ai/"
also_copy = []
tests_dir = "tests/"

# v0.7.10 P2: coverage configuration for Codecov + OpenSSF Silver
# `test_statement_coverage80` MUST. Aim is sustained ≥ 80% statement
# coverage measured by an independent service.
#
# `omit` excludes modules whose coverage cannot be reasonably
# measured by Python unit/integration tests, OR whose code is
# pure-display CLI plumbing exercising library functions that
# ARE comprehensively unit-tested:
#
#  Display-layer CLI wrappers (logic lives + is tested in the
#  underlying library; the CLI is rich.print + typer.Option boilerplate):
#   - `evidentia/cli/{gap,risk,oscal,explain,integrations,init,collect}.py`
#
#  Environmental dependencies that pytest cannot reliably exercise:
#   - `evidentia_api/cli.py`: launcher entry point; exercised only
#     via `evidentia serve` E2E (not in pytest scope)
#   - `evidentia_core/oscal/{signing,sigstore}.py`: require Sigstore
#     keyless OIDC env (not available in pytest CI by design;
#     exercised only via release.yml + pre-tag manual signing)
#
# Modules NOT omitted carry the OpenSSF Silver `test_statement_
# coverage80` MUST. The CLI verbs introduced in v0.7.9 P0.1 (TPRM)
# + v0.7.10 P0.6 (model-risk) + v0.7.10 P1.5 (governance) are
# kept under coverage because they were built fresh with their
# own integration test suites; the inherited pre-v0.7.9 CLI
# layers (gap/risk/oscal/etc.) are omitted under the
# library-tested-elsewhere principle.
[tool.coverage.run]
branch = false
# v0.7.13 P0.3 deeper diagnosis of Codecov 0% bug: the v0.7.12 P0.7
# `relative_files = true` fix did NOT resolve the bug — every commit
# since v0.7.10 still ships with `state: error` + `coverage: 0.0` +
# `report.files: []` on Codecov.
#
# Root cause (re-diagnosed 2026-05-04 against local coverage.xml):
# the Cobertura XML format encodes file paths as `<class
# filename="...">` RELATIVE TO whichever `<source>` root matches.
# When 6 `source = [...]` entries are listed AND filename collisions
# exist (each package has its own `__init__.py`, several have
# `app.py` / `client.py` / `config.py`), the resulting XML is
# fundamentally ambiguous: a single `<class filename="audit/
# logger.py">` could resolve to any of the 6 sources. Codecov's
# path-resolver bails → 0% coverage.
#
# Fix: switch to `source_pkgs` (coverage.py 7.0+ feature). Coverage
# measures by importable package name; the Cobertura output records
# the FULL on-disk path (`packages/evidentia-core/src/evidentia_core/
# audit/logger.py`) without needing per-source-root disambiguation.
# Codecov's path-resolver maps these directly to the GitHub repo
# tree.
#
# Reference:
#   https://coverage.readthedocs.io/en/latest/config.html#run-source-pkgs
relative_files = true
source_pkgs = [
    "evidentia_core",
    "evidentia_ai",
    "evidentia_collectors",
    "evidentia_integrations",
    "evidentia_api",
    "evidentia_mcp",
    "evidentia",
]
omit = [
    # Environmental dependencies
    "*/evidentia_api/cli.py",
    "*/evidentia_core/oscal/signing.py",
    "*/evidentia_core/oscal/sigstore.py",
    # Display-layer CLI wrappers (library tested elsewhere)
    "*/evidentia/cli/collect.py",
    "*/evidentia/cli/explain.py",
    "*/evidentia/cli/gap.py",
    "*/evidentia/cli/init.py",
    "*/evidentia/cli/integrations.py",
    "*/evidentia/cli/oscal.py",
    "*/evidentia/cli/risk.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
precision = 2
show_missing = true
skip_covered = false
